--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,15 @@
   </head>
   
   <body>
-    <select class="breed-select"></select>
-    <p class="loader hidden">
-      <span class="loader"></span>
-    </p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
-    <div class="cat-info"></div>
-    <script src="index.js" type="module"></script>
-  </body>
+  <div class="container">
+  <select class="breed-select" id="single"></select>
+  </div>
+  <div class="container">
+    <span class="loader hidden loading"></span>
+  </div>
+<p class="error">Oops! Something went wrong! Try reloading the page!</p>
+<p class="errorCat">Sorry, something went wrong. Please choose another cat breed.</p>
+<div class="cat-info"></div>
+  <script src="index.js" type="module"></script>
+</body>
 </html>
